--- a/servlet1Project/.project
+++ b/servlet1Project/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>testProjectOne</name>
+	<name>servlet1Project</name>
 	<comment></comment>
 	<projects>
 	</projects>
